# graph-ga

./: .gitignore  Cargo.toml
src/: filter.rs  lib.rs  main.rs  make_spec.m
src/circuit/: mod.rs  types.rs
src/circuit/circuit/: components.rs  load.rs  mod.rs  nodes.rs  repr.rs
src/circuit/components/: mod.rs  passives.rs  sources.rs  util.rs
src/circuit/ga/: crossover.rs  mutation.rs
src/ga/: crossover.rs  mod.rs  mutation.rs
src/network_raw/: circuit.rs  crossover.rs  load.rs  mod.rs  mutation.rs  types.rs
src/network_raw/circuit/: components.rs  graph.rs  load.rs
src/network_raw/components/: passives.rs  sources.rs  util.rs
src/network_raw/ga/: crossover.rs  mutation.rs
tasks/am_bpf/: task.rs
tasks/am_bpf/res/: am_bpf_checkpoint.csv  am_bpf_fitness.csv  gen400  gen50
tasks/voice_lpf/: task.rs
tasks/voice_lpf/run_1/: voice_lpf.kicad_prl  voice_lpf.kicad_pro  voice_lpf.kicad_sch  voice_lpf_checkpoint.csv  voice_lpf_fitness.csv
tasks/voice_lpf/run_2/: voice_lpf_checkpoint.csv  voice_lpf_fitness.csv
tasks/voice_lpf/run_3/: voice_lpf_checkpoint.csv  voice_lpf_fitness.csv
